<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2222"
    >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/acc2" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="158dp"
        android:layout_marginRight="158dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/neko_ime"
        android:background="color/transparent"/>

    <EditText
        android:id="@+id/editText9"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="229dp"
        android:autofillHints=""
        android:background="color/transparent"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nekoime_email_com" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="0dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/izmjena_naloga" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_marginBottom="238dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/recepti"
        tools:text="Recepti"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_marginBottom="191dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/poruceno"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="143dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/potrazite_lijek"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="96dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/o_nama"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_marginBottom="49dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/kontaktirajte_nas"
        android:autofillHints="" />

</RelativeLayout>
